# easy-logger

./: .env.example  README.md  pyproject.toml
demo/: example.py
src/elogger/: __init__.py  consts.py  logger.py
