[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elogger"
version = "0.1.0"
authors = [
  { name="Francisco Muñoz", email="fjmunoz95@gmail.com" },
]
description = "A simple Python Logger wrapper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["python-dotenv"]
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]